adding replay ability

--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
 
     </div>
     <!-- /.container -->
-
-
-    <script type="text/javascript" src="assets/javascript/game.js"></script>
+    <script type="text/javascript" src="assets/javascript/topics.js"></script>
+    <script type="text/javascript" src="assets/javascript/game1.js"></script>
 
 </body>
 
