add replay when loses

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 </head>
 
 <body>
-    <audio controls autoplay hidden loop>
+<!--     <audio controls autoplay hidden loop>
         <source src="assets/musics/rawdeal.mp3">
     </audio>
 
      <audio hidden id="gun">
         <source src="assets/musics/gun2.mp3">
-   </audio>
+   </audio> -->
  
 
     
