adding gun sound again

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 </head>
 
 <body>
-<!--     <audio controls autoplay hidden loop>
+    <audio controls autoplay hidden loop>
         <source src="assets/musics/rawdeal.mp3">
     </audio>
 
      <audio hidden id="gun">
         <source src="assets/musics/gun2.mp3">
-   </audio> -->
+   </audio>
  
 
     
@@ -51,7 +51,7 @@
                 <img class="terminator" src="assets/images/the-terminator.jpg" alt="the-terminator">
                 <img class="bullet" id ="one" src="assets/images/bullet.png" alt="bullet" style="top:190px; left:230px">
                 <img class="bullet" id ="two" src="assets/images/bullet.png" alt="bullet" style="top:240px; left:270px">
-                <img class="bullet" id ="three" src="assets/images/bullet.png" alt="bullet" style="top:150px; left:290px">
+                <!-- <img class="bullet" id ="three" src="assets/images/bullet.png" alt="bullet" style="top:150px; left:290px"> -->
                 <img class="bullet" id ="four" src="assets/images/bullet.png" alt="bullet" style="top:175px; left:360px">
                 <img class="bullet" id ="five" src="assets/images/bullet.png" alt="bullet" style="top:125px; left:360px">
                 <img class="bullet" id ="six" src="assets/images/bullet.png" alt="bullet" style="top:250px; left:380px">
