--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
                 <div class="row" id="guessContainer">
                     <div class="col-lg-7">
+                        <div class="scoreSect">Already Guess:</div>
                     </div>
                     <div class="col-lg-5">
                         <div id="guessWrong"></div>
